--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,6 @@
     --radius1: 3px;
 }
 
-button{
-    background-color: var(--rouge);
-    color: var(--blanc);
-}
-
 header nav{
     background: var(--bleu);
     display: flex;
@@ -77,7 +72,7 @@ header .hero button{
 main .container{
  background-color: var(--gris);
  width: 100%;
- padding-top: 5%;
+ 
 }
 
 .wrapper{
@@ -98,7 +93,8 @@ main .container{
 .sectionTitle{
     font-size: 25px;
     color: var(--bleu);
-    
+    margin-top: 5%;
+    margin-block-end: 30px;
 }
 
 .cardsContainer {
@@ -140,6 +136,8 @@ main .container{
     padding: 2%;
     border-radius: 4%;
     border: none;
+    background-color: var(--rouge);
+    color: var(--blanc);
 }
 
 /* carte des parents */
@@ -177,4 +175,61 @@ main .container{
     font-size: 0.9rem;
     text-align: end;
   
+}
+
+main form{
+    display: flex;
+    flex-direction: column;
+    min-height: 30vh;
+    background-color: var(--blanc);
+    width: 30%;
+    padding: 1%;
+    margin-top: 15vh;
+    -webkit-box-shadow: 0px 0px 15px -4px #0000003d; 
+    box-shadow: 0px 0px 15px -4px #0000003d;
+    margin-bottom: 2%;
+}
+
+form label{
+    margin-block: 3%;
+}
+
+form input, form select, form textarea{
+    width: 100%;
+    padding: 2%;
+    border: 2px solid #e4e4e4; 
+}
+
+form textarea{
+    height: 100px;
+}
+
+.test{
+ margin-block: 5%;
+ width: unset;
+ margin-right: auto;
+}
+/* footer start */
+footer img{
+    width: 30%;
+    margin-block: 3%;
+}
+footer{
+    background-color: var(--bleu);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: var(--blanc);   
+}
+
+
+footer a{
+    text-decoration: none;
+    color: var(--blanc);
+}
+
+.legals{
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
